objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Survey_Completed_Date__c</fullName>
        <inlineHelpText>Date Time Trial Survey was completed</inlineHelpText>
        <label>Survey Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>View_customized_space__c</fullName>
        <label>View customized space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewers_invited_space__c</fullName>
        <label>Viewers invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZI_Supplemental_Email__c</fullName>
        <inlineHelpText>ZoomInfo Supplemental Email</inlineHelpText>
        <label>ZI-Supplemental Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>registration_source_c__c</fullName>
        <label>Registration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deletion_Consideration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Marketing Use.</inlineHelpText>
        <label>Deletion Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Status__c</fullName>
        <inlineHelpText>Status of the latest campaign response (downloaded, requested, attended)</inlineHelpText>
        <label>Latest Campaign Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Handraiser_Date__c</fullName>
        <description>Stamped by Marketo - most recent date this contact did a handraiser action</description>
        <label>Latest Handraiser Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_card_added_user__c</fullName>
        <label>Portal card added user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Reason_formula__c</fullName>
        <formula>If( Now() - Survey_Completed_Date__c &lt; 1, &quot;Trial Owner - &quot;&amp; Routing_Segment_Formula__c  ,

   If(now()- Trial_Request_DT__c &lt; 1 ,
       IF(IsPIckVal( Survey_Company_Size__c ,&quot;&quot;),&quot;Unverified Trial&quot;, &quot;Trial Owner - &quot;&amp; Routing_Segment_Formula__c),
      

 If( Latest_Campaign_Date__c = Today(),
      If( Contains(Latest_Campaign__r.Name,&quot;Enterprise&quot;), &quot;Enterprise Pricing&quot;,Latest_Campaign_Type__c ),&quot;&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lean Data Routing Based on this formula, do not delete or change</inlineHelpText>
        <label>Routing Reason(Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemAccScriptUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SystemAccScriptUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_LD_Routing_Reason__c</fullName>
        <label>LD Routing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_ZoomInfo_ID__c</fullName>
        <inlineHelpText>Company ZoomInfo ID</inlineHelpText>
        <label>ZI-Company ZoomInfo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Active_Projects__c</fullName>
        <formula>Account.Number_of_Active_Projects__c</formula>
        <label>Account Active Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Status__c</fullName>
        <formula>Account.Customer_Status__c</formula>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Long_Contact__c</fullName>
        <formula>Account.ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Long-Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Number__c</fullName>
        <formula>IF(ISPICKVAL( Business_Segment__c  , &quot;1. Self Service&quot;), 1, 
IF(ISPICKVAL(Business_Segment__c , &quot;2. Smart Touch&quot;), 2, 
IF(ISPICKVAL(Business_Segment__c , &quot;3. Solution Sales&quot;), 3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Segment #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column_filter_used_user__c</fullName>
        <label>Column filter used user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Expiration_Date__c</fullName>
        <label>Consent Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_Team_Contact__c</fullName>
        <formula>Text(CreatedBy.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Team - Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_First_Created_Date__c</fullName>
        <formula>IF(TS_Lead_Created_Date__c-datevalue( CreatedDate )&lt;0,TS_Lead_Created_Date__c,datevalue( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Earliest Date Lead/Contact was first created</inlineHelpText>
        <label>Name First Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Current_Sequence_Name__c</fullName>
        <label>O Current Sequence Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB_RR_Routing_Alert_NEW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[PB] RR Routing Alert - NEW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_card_added_space__c</fullName>
        <label>Portal card added space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_tab_created_user__c</fullName>
        <label>Portal tab created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Reason_Formula2__c</fullName>
        <formula>If( Now() - Survey_Completed_Date__c &lt; 1, &quot;Trial Owner - &quot;&amp; Routing_Segment_Formula__c  ,

   If(now()- Trial_Request_DT__c &lt; 1 ,
       IF(IsPIckVal( Survey_Company_Size__c ,&quot;&quot;),&quot;Unverified Trial&quot;, &quot;Trial Owner - &quot;&amp; Routing_Segment_Formula__c),
      

 If( Latest_Campaign_Date__c = Today(),
      If( Contains(Latest_Campaign__r.Name,&quot;Enterprise&quot;), &quot;Enterprise Pricing&quot;,Latest_Campaign_Type__c ),&quot;&quot;

)))</formula>
        <label>Routing Reason(Formula2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Segment_Formula__c</fullName>
        <formula>IF(mk_customer_fit_segment__c=&quot;&quot;,&quot;&quot;,
Account.Suggested_Segmentation_employees__c &amp; &quot;-&quot; &amp;
Case(mk_customer_fit_segment__c,
&quot;very good&quot;, &quot;1. very good&quot;,
&quot;good&quot;,&quot;2. good&quot;,
&quot;medium&quot;,&quot;3. medium&quot;,
&quot;low&quot;,&quot;4. low&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula based on employee # and MadKudu Score
S=Solution / V=Velocity
1=very good / 2=good / 3=medium
X-4 (all w low score)</inlineHelpText>
        <label>Routing Segment(Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Contact_Created_Date__c</fullName>
        <label>[TS] Contact Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>account6QAEndDate6sense__c</fullName>
        <description>The date the account was disqualified from 6QA status (YYYY-MM-DD).</description>
        <label>6sense Account 6QA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense__c</fullName>
        <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Account Profile Fit </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactProfileFit6sense__c</fullName>
        <description>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Contact Profile Fit </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactSourceType6sense__c</fullName>
        <description>6sense field to capture if the record was created automatically (Orchestration) or by a push from a rep (sales intelligence)</description>
        <label>6sense Contact Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orchestration</fullName>
                </value>
                <value>
                    <fullName>Sales Intelligence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contactUpdateDate6sense__c</fullName>
        <description>The latest update date and time when 6sense Scores were updated.</description>
        <label>6sense Contact Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Date the person was acquired (From Marketo)</description>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Business_Segment__c</fullName>
        <formula>Account.Business_Segment_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz Account Business Segment # - Delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asked_about_Scaling_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked about Scaling plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_view_switched_user__c</fullName>
        <label>Board view switched user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column_filter_used_space__c</fullName>
        <label>Column filter used space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Trial_Request__c</fullName>
        <formula>If(IsBlank(Trial_Request_DT__c),Null, now() -   Trial_Request_DT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since Trial was requested, null if trial request date is blank</inlineHelpText>
        <label>Days Since Trial Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <formula>If(IsNull(LastActivityDate),Null,Today()-LastActivityDate)</formula>
        <label>Days since last activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Not_Routed_Reason__c</fullName>
        <label>LD Not Routed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_MQL_Date__c</fullName>
        <label>Lifecycle Stage - First MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_SAL_Date__c</fullName>
        <label>Lifecycle Stage - SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_SQL_Date__c</fullName>
        <label>Lifecycle Stage - SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_tab_created_space__c</fullName>
        <label>Portal tab created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_STS_No_Activity_First__c</fullName>
        <description>Timestamps (TS) when Smart Touch Signal (STS) &quot;No Activity&quot; was first inputted.</description>
        <label>TS: STS - No Activity (First)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense__c</fullName>
        <description>The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities. 

Target - The buyer may not realize a problem exists, but may fit within the seller’s TAM. 

Awareness - The buyer realizes they have a problem. The buyer is doing educational research to more clearly understand, frame, and identify their problem. 

Consideration - The buyer defines their problem and researches options to solve it. The buyer is researching all of the available options to solve the defined problem. 

Decision - The buyer chooses a solution. The buyer is narrowing a list of potential vendors to ultimately make a purchase decision. 

Purchase - The buyer commits to a specific solution and justifies the reasons for the purchase.</description>
        <label>6sense Account Buying Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense__c</fullName>
        <description>A measure, between 0 and 100, of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</description>
        <label>6sense Account Intent Score </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cbit_EmploymentSeniority__c</fullName>
        <label>Employment Seniority (cbit)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactIntentScore6sense__c</fullName>
        <description>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Contact Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Board_view_switched_space__c</fullName>
        <label>Board view switched space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_members_counter__c</fullName>
        <description>Number of community members linked to this Contact.</description>
        <inlineHelpText>Number of community members linked to this Contact.</inlineHelpText>
        <label>Community members counter</label>
        <summaryForeignKey>Community_Member__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contributors_invited_user__c</fullName>
        <label>Contributors invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Due__c</fullName>
        <label>Current Sequence Step Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Person_Date__c</fullName>
        <label>Targeted Person Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Features_board_shown_user__c</fullName>
        <label>Features board shown user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Smart_Touch_Signal__c</fullName>
        <label>Latest Smart Touch Signal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Dead_Date__c</fullName>
        <label>Lifecycle Stage - Dead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Lead_Date__c</fullName>
        <label>Lifecycle Stage - Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketo_MQL_Issue_Bandaid__c</fullName>
        <description>Signifies whether this was part of the flow that fixes 1.0 -&gt; 2.0 MQL in SFDC and not Marketo. This is just a temporary bandaid that should be removed in the future when this issue is fixed in Marketo.</description>
        <label>Marketo MQL Issue Bandaid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Info_mkto__c</fullName>
        <label>Original Source Info</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Type_mkto__c</fullName>
        <label>Original Source Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_From_Project_Date__c</fullName>
        <label>Removed From Project Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Last_Updated__c</fullName>
        <label>Subscription - Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_STS_No_Activity_Latest__c</fullName>
        <description>Timestamps when last Smart Touch Signal (STS) &quot;No Activity&quot; was updated.</description>
        <label>TS: STS - No Activity (Latest)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>account6QAAgeInDays6sense__c</fullName>
        <description>Days the account has been in 6QA status.</description>
        <label>6sense Account 6QA Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account6QAStartDate6sense__c</fullName>
        <description>The date the account qualified for 6QA status (YYYY-MM-DD).</description>
        <label>6sense Account 6QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense__c</fullName>
        <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Account Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactProfileScore6sense__c</fullName>
        <description>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Contact Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_New_Contact_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert - New Contact Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Solution_Sales__c</fullName>
        <formula>Not(IsBlank( TS_Contact_Assigned_to_Solution_Sales__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks TS_Contact_Assigned_to_Solution_Sales__c field has a value</inlineHelpText>
        <label>Assigned to Solution Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Velocity_Sales__c</fullName>
        <formula>not(IsNull( TS_Contact_Assigned_to_Smart_Touch__c ))</formula>
        <inlineHelpText>Check if TS_Contact_Assigned_to_Smart_Touch__c field has value</inlineHelpText>
        <label>Assigned to Velocity Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contributors_invited_space__c</fullName>
        <label>Contributors invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Account_Date__c</fullName>
        <label>Targeted Account Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Company_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Company Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Latest_Campaign__c</fullName>
        <formula>If(isblank(Latest_Campaign_Date__c),99999,today()-Latest_Campaign_Date__c)</formula>
        <inlineHelpText>days since the latest campaign response date</inlineHelpText>
        <label>Days Since Latest Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Features_board_shown_space__c</fullName>
        <label>Features board shown space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoverningPrivacyRegulation__c</fullName>
        <label>Governing Privacy Regulation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadGenius_Enrichment_Date__c</fullName>
        <label>LeadGenius Enrichment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Public_idea_suggested_user__c</fullName>
        <label>Public idea suggested user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_view_switched_user__c</fullName>
        <label>Roadmap view switched user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STS_No_Activity_Actionable__c</fullName>
        <formula>and(
not(isblank( Smart_Touch_Signal_No_Activity__c )),
 ISPICKVAL(Business_Segment__c, &quot;Smart Touch&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STS: No Activity Actionable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Consolidating_ideas__c</fullName>
        <label>Survey Consolidating ideas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Quant_Answers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TS_Contact_Assigned_to_SDR__c</fullName>
        <description>Date the contact was assigned to SDR for the first time</description>
        <label>[TS] Contact Assigned to SDR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Marketo Program Name or Campaign that acquired the person (From Marketo)</description>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Estimated_Employees__c</fullName>
        <formula>Account.Max_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Estimated Employees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Actor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Sequence Step Actor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Survey_Completed__c</fullName>
        <formula>If(IsBlank( Survey_Completed_Date__c ),Null, now() -   Survey_Completed_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since &quot;Survey Completed Date&quot;</inlineHelpText>
        <label>Days Since Survey Completed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Note_Wrong_Routing__c</fullName>
        <description>for sdrs to dismiss an inbound</description>
        <inlineHelpText>for sdrs to dismiss an inbound</inlineHelpText>
        <label>Internal Note - Wrong Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_section_created_user__c</fullName>
        <label>Portal section created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_idea_suggested_space__c</fullName>
        <label>Public idea suggested space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_on_the_community__c</fullName>
        <label>Registered on the community</label>
        <summaryForeignKey>Community_Member__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roadmap_view_switched_space__c</fullName>
        <label>Roadmap view switched space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Contact_Enrichment_Status__c</fullName>
        <description>https://docs.google.com/document/d/1ohwJDrSIqmqb1ZQtDvHH6v7KzOPvL6Kownn8H5Tqw0E/edit?ts=5d79358f</description>
        <formula>Case( cbit__Clearbit__r.cbit__Status__c ,
200,&quot;1.0 Success&quot;,
202, &quot;2.0 Queued/Incomplete&quot;,
402, &quot;2.0 Queued/Incomplete&quot;,
429,&quot;2.0 Queued/Incomplete&quot;,
400,&quot;2.0 Enrichment Error&quot;,
401,&quot;2.0 Invalid API Key&quot;,
404,&quot;3.0 Email Not Found&quot;,
422,&quot;3.0 Invalid Email&quot;,
500,&quot;2.0 CB API Error&quot;,
503,&quot;2.0 CB API Error&quot;,
901,&quot;2.0 Can&apos;t Update Record&quot;,
0, &quot;4.0 Missing Email&quot;,
&quot;Unknown Code: &quot; &amp; Text(cbit__Clearbit__r.cbit__Status__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Clearbit enrichment status based on CB Status Code</inlineHelpText>
        <label>CB Contact Enrichment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Employee_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Employee Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Engaged_Date__c</fullName>
        <label>Lifecycle Stage - Engaged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MadKudu_Exclude_From_Scoring__c</fullName>
        <formula>IsPickVal( Trial_Source__c ,&quot;Trial User&quot;) &amp;&amp;  Account.Customer_Status_Number__c = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Exclude Customer team users from scoring</inlineHelpText>
        <label>MadKudu Exclude From Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_ID__c</fullName>
        <label>Current Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Initial_Sequence_ID__c</fullName>
        <label>Initial Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_section_created_space__c</fullName>
        <label>Portal section created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_release_toggled_user__c</fullName>
        <label>Roadmap release toggled user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Same_as_Contact__c</fullName>
        <formula>OwnerId = Account.OwnerId ||
OwnerId =  Account.Account_SDR__r.Id ||
OwnerId =  Account.Owner.SDR__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Same as Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Survey_Requested__c</fullName>
        <label>Cancellation Survey Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Source_March_2019__c</fullName>
        <description>Since LeadSource field is populated by Marketo, a value in this field is original one before Marketo</description>
        <label>Legacy Lead Source (March 2019)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account User</fullName>
                </value>
                <value>
                    <fullName>Event/Webinar</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Paid Ad</fullName>
                </value>
                <value>
                    <fullName>Referral/Partner</fullName>
                </value>
                <value>
                    <fullName>Referral: Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Sales Outbound</fullName>
                </value>
                <value>
                    <fullName>Trade Show/Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Web Sign Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ad - AdWords</fullName>
                </value>
                <value>
                    <fullName>Ad - Facebook</fullName>
                </value>
                <value>
                    <fullName>Ad - LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Ad - Twitter</fullName>
                </value>
                <value>
                    <fullName>Ad - Quora</fullName>
                </value>
                <value>
                    <fullName>Ad - Media Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Ad - Taboola</fullName>
                </value>
                <value>
                    <fullName>Ad - Outbrain</fullName>
                </value>
                <value>
                    <fullName>Content - Case Study</fullName>
                </value>
                <value>
                    <fullName>Content - eBook</fullName>
                </value>
                <value>
                    <fullName>Content - One Pager</fullName>
                </value>
                <value>
                    <fullName>Content - Webinar</fullName>
                </value>
                <value>
                    <fullName>Content - Video</fullName>
                </value>
                <value>
                    <fullName>Content - Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Event - Conference</fullName>
                </value>
                <value>
                    <fullName>Event - Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Prospecting - LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Prospecting - Scraping</fullName>
                </value>
                <value>
                    <fullName>Referral - Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Customer_Date__c</fullName>
        <label>Lifecycle Stage - Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Prospect_Date__c</fullName>
        <label>LS - Engaged Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>